Начал делать кнопки

--- a/catalog.html
+++ b/catalog.html
@@ -32,9 +32,9 @@
                 <li><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
               </ul>
             </li>
-            <li class="header-catalog-button">
+            <!-- <li class="header-catalog-button">
               <button class="button catalog-open-button" type="button" aria-label="Раскрыть меню каталога товаров"></button>
-            </li>
+            </li> -->
             <li class="header-delivery"><a href="delivery.html">Доставка</a></li>
             <li class="header-warranty"><a href="warranty.html">Гарантия</a></li>
             <li class="header-contacts"><a href="contacts.html">Контакты</a></li>
@@ -99,7 +99,7 @@
                   </li>
                 </ul>
               </fieldset>
-              <button class="filter-button button" type="submit" >Показать</button>
+              <button class="button filter-button" type="submit" >Показать</button>
             </form>
           </section>
 
@@ -166,13 +166,13 @@
                 </li>
               </ul>
               <div class="pagination">
-                <span class="button catalog-button catalog-button-back">Назад</span>
+                <span class="catalog-button catalog-button-back">Назад</span>
                 <ul class="pagination-list">
                   <li class="pagination-item pagination-item-current"><a>1</a></li>
                   <li class="pagination-item"><a href="#">2</a></li>
                   <li class="pagination-item"><a href="#">3</a></li>
                 </ul>
-                <span class="button catalog-button catalog-button-next">Вперед</span>
+                <span class="catalog-button catalog-button-next">Вперед</span>
               </div>
             </section>
           </div>
