--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <li><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
               </ul>
             </li>
-            <li class="header-catalog-button">
+            <!-- <li class="header-catalog-button">
               <button class="button catalog-open-button" type="button" aria-label="Раскрыть меню каталога товаров"></button>
-            </li>
+            </li> -->
             <li class="header-delivery"><a href="delivery.html">Доставка</a></li>
             <li class="header-warranty"><a href="warranty.html">Гарантия</a></li>
             <li class="header-contacts"><a href="contacts.html">Контакты</a></li>
@@ -72,9 +72,8 @@
                   </p>
                 </a>
                 <p class="slider-item-description">Самая длинная палка для селфи доступна в нашем магазине.<br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. </p>
-                <a href="catalog-item.html">
-                  <span class="button slider-item-button">Подробнее</span>
-                </a>
+                <a class="button slider-item-button" href="catalog-item.html">
+                Подробнее</a>
                 <h4 class="visually-hidden">Основные параметры товара</h4>
                 <table class="slider-table">
                   <tr class="slider-table-head">
@@ -106,9 +105,8 @@
                   </p>
                 </a>
                 <p class="slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не пропускать занятия и соблюдать диету.</p>
-                <a href="catalog-item.html">
-                  <span class="button slider-item-button">Подробнее</span>
-                </a>
+                <a class="button slider-item-button" href="catalog-item.html">
+                Подробнее</a>
                 <h4 class="visually-hidden">Основные параметры товара</h4>
                 <table class="slider-table">
                   <tr class="slider-table-head">
@@ -136,9 +134,8 @@
                   </p>
                 </a>
                 <p class="slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен <br>мощным лазером, замаскированным под стандартную камеру.</p>
-                <a href="catalog-item.html">
-                  <span class="button slider-item-button">Подробнее</span>
-                </a>
+                <a class="button slider-item-button" href="catalog-item.html">
+                Подробнее</a>
                 <h4 class="visually-hidden">Основные параметры товара</h4>
                 <table class="slider-table">
                   <tr class="slider-table-head">
@@ -178,7 +175,8 @@
             <input class="visually-hidden" type="radio" id="credit" name="services-toggle">
 
             <div class="services-controls">
-              <label class="button services-button service-current" for="delivery">Доставка</label>
+              <!-- <label class="button services-button service-current" for="delivery">Доставка</label> -->
+              <label class="button" for="delivery">Доставка</label>
               <label class="button services-button" for="warranty">Гарантия</label>
               <label class="button services-button" for="credit">Кредит</label>
             </div>
@@ -245,9 +243,8 @@
               <li class="transport-item"><a href="#">ЖелДорЭкспедиция</a></li>
             </ul>
             <p>
-              <a class="button about-us-button" href="about-us.html">
-                Подробнее о нас
-              </a>
+              <!-- <a class="button about-us-button" href="about-us.html"> -->
+              <a class="button" href="about-us.html">Подробнее о нас</a>
             </p>
           </section>
 
@@ -352,9 +349,7 @@
           <label class="write-us-label" for="email-text">Текст письма:</label>
           <input class="write-us-text" id="email-text" type="text" name="email-text" placeholder="В свободной форме">
         </p>
-        <button class="button email-send-button" type="submit">
-          Отправить
-        </button>
+        <button class="button email-send-button" type="submit">Отправить</button>
       </form>
       <button class="modal-close" type="button" aria-label="Закрыть"></button>
     </section>
