Кнопки - последние штрихи

--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@
             <input class="visually-hidden" type="radio" id="credit" name="services-toggle">
 
             <div class="services-controls">
-              <!-- <label class="button services-button service-current" for="delivery">Доставка</label> -->
-              <label class="button" for="delivery">Доставка</label>
+              <label class="button services-button service-current" for="delivery">Доставка</label>
               <label class="button services-button" for="warranty">Гарантия</label>
               <label class="button services-button" for="credit">Кредит</label>
             </div>
@@ -243,8 +242,7 @@
               <li class="transport-item"><a href="#">ЖелДорЭкспедиция</a></li>
             </ul>
             <p>
-              <!-- <a class="button about-us-button" href="about-us.html"> -->
-              <a class="button" href="about-us.html">Подробнее о нас</a>
+              <a class="button about-us-button" href="about-us.html">Подробнее о нас</a>
             </p>
           </section>
 
