--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
             </a>
           </div>
           <ul class="user-navigation">
-            <li class="search-open"><a href="#">Поиск по сайту</a></li>
+            <li class="search-block">
+              <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+                <input class="search-input" id="search-text" type="text" name="search-text" placeholder="Поиск по сайту" autocomplete="off">
+                <button class="search-button" type="submit">Найти</button>
+              </form>
+            </li>
             <li class="login-link"><a href="login.html">Войти</a></li>
             <li class="compare"><a href="compare.html">Сравнить</a></li>
             <li class="basket"><a href="basket.html">Корзина</a></li>
