index - мелкие доработки футера

--- a/index.html
+++ b/index.html
@@ -275,18 +275,14 @@
       <div class="main-footer-wrapper">
         <div class="container">
           <div class="footer-top">
-            <div class="column-1">
-              <a>
-                <img class="footer-logo" src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
-              </a>
-            </div>
-            <div class="column-2">
-              <ul class="footer-user-navigation">
-                <li class="footer-login-link"><a href="login.html">Войти</a></li>
-                <li class="footer-compare"><a href="compare.html">Сравнить</a></li>
-                <li class="footer-basket"><a href="basket.html">Корзина</a></li>
-              </ul>
-            </div>
+            <a>
+              <img class="footer-logo" src="img/logo-device-yellow.svg" width="162" height="35" alt="Логотип интернет-магазина «Device»">
+            </a>
+            <ul class="footer-user-navigation">
+              <li class="footer-login-link"><a href="login.html">Войти</a></li>
+              <li class="footer-compare"><a href="compare.html">Сравнить</a></li>
+              <li class="footer-basket"><a href="basket.html">Корзина</a></li>
+            </ul>
           </div>
           <div class="footer-middle">
             <div class="column-1">
@@ -304,8 +300,6 @@
             </div>
           </div>
           <div class="footer-bottom">
-            <div class="column-1">
-            </div>
             <div class="column-2">
               <ul class="social-buttons">
                 <li>
@@ -322,13 +316,9 @@
                 </li>
               </ul>
             </div>
-            <div class="column-3">
-              <span class="footer-copyright">
-                <a href="https://htmlacademy.ru/intensive/htmlcss">
-                  <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
-                </a>
-              </span>
-            </div>
+            <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
+            </a>
           </div>
         </div>
       </div>
