catalog - обновил разметку хедера и футера

--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,12 @@
             </a>
           </div>
           <ul class="user-navigation">
-            <li class="search-open"><a href="#">Поиск по сайту</a></li>
+            <li class="search-block">
+              <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+                <input class="search-input" id="search-text" type="text" name="search-text" placeholder="Поиск по сайту" autocomplete="off">
+                <button class="search-button" type="submit">Найти</button>
+              </form>
+            </li>
             <li class="login-link"><a href="login.html">Войти</a></li>
             <li class="compare"><a href="compare.html">Сравнить</a></li>
             <li class="basket"><a href="basket.html">Корзина</a></li>
@@ -32,9 +37,6 @@
                 <li><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
               </ul>
             </li>
-            <!-- <li class="header-catalog-button">
-              <button class="button catalog-open-button" type="button" aria-label="Раскрыть меню каталога товаров"></button>
-            </li> -->
             <li class="header-delivery"><a href="delivery.html">Доставка</a></li>
             <li class="header-warranty"><a href="warranty.html">Гарантия</a></li>
             <li class="header-contacts"><a href="contacts.html">Контакты</a></li>
@@ -186,18 +188,14 @@
       <div class="main-footer-wrapper">
         <div class="container">
           <div class="footer-top">
-            <div class="column-1">
-              <a>
-                <img class="footer-logo" src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
-              </a>
-            </div>
-            <div class="column-2">
-              <ul class="footer-user-navigation">
-                <li class="footer-login-link"><a href="login.html">Войти</a></li>
-                <li class="footer-compare"><a href="compare.html">Сравнить</a></li>
-                <li class="footer-basket"><a href="basket.html">Корзина</a></li>
-              </ul>
-            </div>
+            <a>
+              <img class="footer-logo" src="img/logo-device-yellow.svg" width="162" height="35" alt="Логотип интернет-магазина «Device»">
+            </a>
+            <ul class="footer-user-navigation">
+              <li class="footer-login-link"><a href="login.html">Войти</a></li>
+              <li class="footer-compare"><a href="compare.html">Сравнить</a></li>
+              <li class="footer-basket"><a href="basket.html">Корзина</a></li>
+            </ul>
           </div>
           <div class="footer-middle">
             <div class="column-1">
@@ -215,25 +213,25 @@
             </div>
           </div>
           <div class="footer-bottom">
-            <div class="column-1">
-            </div>
             <div class="column-2">
               <ul class="social-buttons">
                 <li>
-                  <a class="social-button" href="#" aria-label="Фейсбук">
+                  <a class="social-button fb-button" href="#" aria-label="Фейсбук">
                   </a>
                 </li>
-                <li><a class="social-button" href="#" aria-label="Инстаграм"></a></li>
-                <li><a class="social-button" href="#" aria-label="Твиттер"></a></li>
+                <li>
+                  <a class="social-button instagram-button" href="#" aria-label="Инстаграм">
+                  </a>
+                </li>
+                <li>
+                  <a class="social-button twitter-button" href="#" aria-label="Твиттер">
+                  </a>
+                </li>
               </ul>
             </div>
-            <div class="column-3">
-              <span class="footer-copyright">
-                <a href="https://htmlacademy.ru/">
-                  <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
-                </a>
-              </span>
-            </div>
+            <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
+            </a>
           </div>
         </div>
       </div>
