catalog - сделал карточку товара

--- a/catalog.html
+++ b/catalog.html
@@ -115,31 +115,58 @@
               <h2 class="visually-hidden">Список моноподов для селфи</h2>
               <ul class="catalog-list">
                 <li class="catalog-item">
-                  <a href="catalog-item.html">
-                    <h3>
-                        <span class="catalog-item-name">Любительская селфи-палка</span>
-                    </h3>
-                    <p class="catalog-item-image">
-                        <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-                    </p>
-                  </a>
-                  <p class="catalog-item-price">
-                    <b>500 ₽</b>
+                  <p class="catalog-item-image">
+                    <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
                   </p>
+                  <div class="item-name-price">
+                    <a href="catalog-item.html">
+                      <h3 class="catalog-item-name">Любительская селфи-палка Любительская селфи-палка Любительская селфи-палка Любительская селфи-палка Любительская селфи-палка </h3>
+                    </a>
+                    <p class="catalog-item-price">
+                      <b>500 руб.</b>
+                    </p>
+                  </div>
+                  <div class="item-new">New</div>
+                  <div class="actions">
+                      <a class="button add-cart-button" href="#" >В корзину</a>
+                      <a class="add-compare" href="#" >Добавить к сравнению</a>
+                  </div>
                 </li>
+
                 <li class="catalog-item">
-                  <a href="catalog-item.html">
-                    <h3>
-                        <span class="catalog-item-name">Профессиональная селфи-палка</span>
-                    </h3>
-                    <p class="catalog-item-image">
-                        <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-                    </p>
-                  </a>
-                  <p class="catalog-item-price">
-                    <b>1 500 ₽</b>
+                  <p class="catalog-item-image">
+                    <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
                   </p>
+                  <div class="item-name-price">
+                    <a href="catalog-item.html">
+                      <h3 class="catalog-item-name">Любительская селфи-палка</h3>
+                    </a>
+                    <p class="catalog-item-price">
+                      <b>500 руб.</b>
+                    </p>
+                  </div>
+                  <div class="item-new">New</div>
+                  <div class="actions">
+                      <a class="button add-cart-button" href="#" >В корзину</a>
+                      <a class="add-compare" href="#" >Добавить к сравнению</a>
+                  </div>
                 </li>
+
+                <li class="catalog-item">
+                  <img class="catalog-item-image" src="img/item-2.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                  <div class="item-name-price">
+                    <a href="catalog-item.html">
+                      <h3 class="catalog-item-name">Профессиональная селфи-палка</h3>
+                    </a>
+                    <p class="catalog-item-price">
+                      <b>1 500 руб.</b>
+                    </p>
+                  </div>
+                </li>
+
+
+
+
                 <li class="catalog-item">
                   <a href="catalog-item.html">
                     <h3>
