catalog - начал пагинацию

--- a/catalog.html
+++ b/catalog.html
@@ -120,13 +120,12 @@
                   </p>
                   <div class="item-name-price">
                     <a href="catalog-item.html">
-                      <h3 class="catalog-item-name">Любительская селфи-палка Любительская селфи-палка Любительская селфи-палка Любительская селфи-палка Любительская селфи-палка </h3>
+                      <h3 class="catalog-item-name">Любительская селфи-палка</h3>
                     </a>
                     <p class="catalog-item-price">
                       <b>500 руб.</b>
                     </p>
                   </div>
-                  <div class="item-new">New</div>
                   <div class="actions">
                       <a class="button add-cart-button" href="#" >В корзину</a>
                       <a class="add-compare" href="#" >Добавить к сравнению</a>
@@ -135,14 +134,50 @@
 
                 <li class="catalog-item">
                   <p class="catalog-item-image">
-                    <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                    <img src="img/item-2.jpg" width="360" height="380" alt="Любительская селфи-палка">
                   </p>
                   <div class="item-name-price">
                     <a href="catalog-item.html">
-                      <h3 class="catalog-item-name">Любительская селфи-палка</h3>
+                      <h3 class="catalog-item-name">Профессиональная селфи-палка</h3>
                     </a>
                     <p class="catalog-item-price">
-                      <b>500 руб.</b>
+                      <b>1 500 руб.</b>
+                    </p>
+                  </div>
+                  <div class="actions">
+                      <a class="button add-cart-button" href="#" >В корзину</a>
+                      <a class="add-compare" href="#" >Добавить к сравнению</a>
+                  </div>
+                </li>
+
+                <li class="catalog-item">
+                  <p class="catalog-item-image">
+                    <img src="img/item-3.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                  </p>
+                  <div class="item-name-price">
+                    <a href="catalog-item.html">
+                      <h3 class="catalog-item-name">Непотопляемая селфи-палка</h3>
+                    </a>
+                    <p class="catalog-item-price">
+                      <b>2 500 руб.</b>
+                    </p>
+                  </div>
+                  <div class="actions">
+                      <a class="button add-cart-button" href="#" >В корзину</a>
+                      <a class="add-compare" href="#" >Добавить к сравнению</a>
+                  </div>
+                </li>
+
+                <li class="catalog-item">
+                  <p class="catalog-item-image">
+                    <img src="img/item-4.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                  </p>
+                  <div class="item-name-price">
+                    <a href="catalog-item.html">
+                      <h3 class="catalog-item-name">Селфи-палка «Следуй за мной»</h3>
+                    </a>
+                    <p class="catalog-item-price">
+                      <b>4 900 руб.</b>
                     </p>
                   </div>
                   <div class="item-new">New</div>
@@ -152,56 +187,15 @@
                   </div>
                 </li>
 
-                <li class="catalog-item">
-                  <img class="catalog-item-image" src="img/item-2.jpg" width="360" height="380" alt="Любительская селфи-палка">
-                  <div class="item-name-price">
-                    <a href="catalog-item.html">
-                      <h3 class="catalog-item-name">Профессиональная селфи-палка</h3>
-                    </a>
-                    <p class="catalog-item-price">
-                      <b>1 500 руб.</b>
-                    </p>
-                  </div>
-                </li>
-
-
-
-
-                <li class="catalog-item">
-                  <a href="catalog-item.html">
-                    <h3>
-                        <span class="catalog-item-name">Непотопляемая селфи-палка</span>
-                    </h3>
-                    <p class="catalog-item-image">
-                        <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-                    </p>
-                  </a>
-                  <p class="catalog-item-price">
-                    <b>2 500 ₽</b>
-                  </p>
-                </li>
-                <li class="catalog-item">
-                  <a href="catalog-item.html">
-                    <h3>
-                        <span class="catalog-item-name">Селфи-палка «Следуй за мной»</span>
-                    </h3>
-                    <p class="catalog-item-image new-item">
-                        <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-                    </p>
-                  </a>
-                  <p class="catalog-item-price">
-                    <b>4 900 ₽</b>
-                  </p>
-                </li>
               </ul>
               <div class="pagination">
-                <span class="catalog-button catalog-button-back">Назад</span>
+                <button class="catalog-button catalog-button-back">Назад</button>
                 <ul class="pagination-list">
                   <li class="pagination-item pagination-item-current"><a>1</a></li>
                   <li class="pagination-item"><a href="#">2</a></li>
                   <li class="pagination-item"><a href="#">3</a></li>
                 </ul>
-                <span class="catalog-button catalog-button-next">Вперед</span>
+                <button class="catalog-button catalog-button-next">Вперед</button>
               </div>
             </section>
           </div>
