--- a/catalog.html
+++ b/catalog.html
@@ -189,14 +189,14 @@
 
               </ul>
               <div class="pagination">
-                <button class="catalog-button catalog-button-back">Назад</button>
+                <button class="pagination-button pagination-button-back">Назад</button>
                 <ul class="pagination-list">
                   <li class="pagination-item pagination-item-current"><a>1</a></li>
                   <li class="pagination-item"><a href="#">2</a></li>
                   <li class="pagination-item"><a href="#">3</a></li>
 
                 </ul>
-                <button class="catalog-button catalog-button-next">Вперед</button>
+                <button class="pagination-button pagination-button-next">Вперед</button>
               </div>
             </section>
           </div>
