catalog - сделал фильтр стимость

--- a/catalog.html
+++ b/catalog.html
@@ -62,7 +62,23 @@
           <section class="filters-column">
             <h2 class="filter-title">Фильтр:</h2>
             <form class="filter" method="get" action="https://echo.htmlacademy.ru">
-              <!-- Здесь будет фильтр Стоимость -->
+              <fieldset class="filter-item">
+                <legend>Стоимость</legend>
+                <div class="range-filter">
+                  <div class="range-controls">
+                    <div class="scale">
+                      <div class="bar"></div>
+                    </div>
+                    <div class="toggle toggle-min"></div>
+                    <div class="toggle toggle-max"></div>
+                    <!-- <div class="price-controls"> -->
+                      <label class="min-price">от <input name="min-price" type="text" value="0"></label>
+                      <label class="max-price">до <input name="max-price" type="text" value="5000"></label>
+                    <!-- </div> -->
+                  </div>
+                </div>
+              </fieldset>
+
               <fieldset>
                 <legend>Цвет</legend>
                 <ul>
