--- a/catalog.html
+++ b/catalog.html
@@ -87,7 +87,7 @@
                     <label for="black-field">Черный</label>
                   </li>
                   <li class="filter-option">
-                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="white" id="white-field" disabled>
+                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="white" id="white-field">
                     <label for="white-field">Белый</label>
                   </li>
                   <li class="filter-option">
@@ -108,7 +108,7 @@
                 <legend>Bluetooth</legend>
                 <ul>
                   <li class="filter-option">
-                    <input class="visually-hidden filter-input filter-input-radio" type="radio" name="bluetooth" id="bluetooth-yes" value="bluetooth-yes">
+                    <input class="visually-hidden filter-input filter-input-radio" type="radio" name="bluetooth" id="bluetooth-yes" value="bluetooth-yes" checked>
                     <label for="bluetooth-yes">Есть</label>
                   </li>
                   <li class="filter-option">
@@ -124,7 +124,32 @@
           <div class="catalog-column">
             <section class="sorting">
               <h2 class="sorting-title">Сортировка:</h2>
-              <!-- Здесь будет сортировка -->
+              <form class="sorting-form" method="get" action="https://echo.htmlacademy.ru">
+                  <ul class="sorting-options">
+                    <li class="sorting-option">
+                      <input class="visually-hidden sorting-input-radio" type="radio" name="sorting-radio" id="sorting-price" value="sorting-price" checked>
+                      <label for="sorting-price">По цене</label>
+                    </li>
+                    <li class="sorting-option">
+                      <input class="visually-hidden sorting-input-radio" type="radio" name="sorting-radio" id="sorting-type" value="sorting-type">
+                      <label for="sorting-type">По типу</label>
+                    </li>
+                    <li class="sorting-option">
+                      <input class="visually-hidden sorting-input-radio" type="radio" name="sorting-radio" id="sorting-popularity" value="sorting-popularity">
+                      <label for="sorting-popularity">По популярности</label>
+                    </li>
+                  </ul>
+                  <ul class="sorting-direction">
+                    <li class="direction-type">
+                      <input class="visually-hidden direction-input-radio" type="radio" name="direction-radio" id="ascending" value="ascending">
+                      <label for="ascending" aria-label="По возрастанию"></label>
+                    </li>
+                    <li class="direction-type">
+                      <input class="visually-hidden direction-input-radio" type="radio" name="direction-radio" id="descending" value="descending" checked>
+                      <label for="descending" aria-label="По убыванию"></label>
+                    </li>
+                  </ul>
+              </form>
             </section>
 
             <section class="catalog">
