--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,9 @@
                 <button class="search-button" type="submit">Найти</button>
               </form>
             </li>
-            <li class="login-link"><a href="login.html">Войти</a></li>
+            <li class="profile-link"><a href="#">Валентин Петухов</a></li>
+            <li class="logout-link"><a href="#">Выйти</a></li>
+            <!-- <li class="login-link"><a href="login.html">Войти</a></li> -->
             <li class="compare"><a href="compare.html">Сравнить</a></li>
             <li class="basket"><a href="basket.html">Корзина</a></li>
           </ul>
@@ -255,6 +257,8 @@
               <img class="footer-logo" src="img/logo-device-yellow.svg" width="162" height="35" alt="Логотип интернет-магазина «Device»">
             </a>
             <ul class="footer-user-navigation">
+              <!-- <li class="profile-link"><a href="#">Валентин Петухов</a></li>
+              <li class="logout-link"><a href="#">Выйти</a></li> -->
               <li class="footer-login-link"><a href="login.html">Войти</a></li>
               <li class="footer-compare"><a href="compare.html">Сравнить</a></li>
               <li class="footer-basket"><a href="basket.html">Корзина</a></li>
