index - дополнил стилизацию модального окна

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           <label class="write-us-label" for="user-email">Ваш e-mail:</label>
           <input class="write-us-email" id="user-email" type="email" name="user-email" placeholder="email@example.com">
         </p>
-        <p class="write-us-item">
+        <p class="write-us-item write-us-text-item">
           <label class="write-us-label" for="email-text">Текст письма:</label>
           <input class="write-us-text" id="email-text" type="text" name="email-text" placeholder="В свободной форме">
         </p>
